--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
-<h2 class="text-4xl font-bold">
-  Hello world!!
-</h2>
+<div class="container">
+  <h2 class="text-4xl font-bold">
+    Hello world!
+  </h2>
 
-<div class="focus:text-9xl">
-    <input type="text" value="Ola">
+  <%= link_to "See all transactions", transactions_path, class: "underline text-blue-600" %>
 </div>
