--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -80,7 +80,7 @@
             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300
             hover:bg-gray-700 hover:text-white" -->
             <a
-              href="#"
+              href="<%= root_path  %>"
               class="
                 bg-gray-900
                 text-white
@@ -91,7 +91,7 @@
                 font-medium
               "
               aria-current="page"
-            >Dashboard</a>
+            >Home</a>
 
             <a
               href="#"
@@ -270,7 +270,7 @@
       <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300
       hover:bg-gray-700 hover:text-white" -->
       <a
-        href="#"
+        href="<%= root_path %>"
         class="
           bg-gray-900
           text-white
@@ -282,7 +282,7 @@
           font-medium
         "
         aria-current="page"
-      >Dashboard</a>
+      >Home</a>
 
       <a
         href="#"
