major: Adding tests, views and github actions workflow (still in progress)

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -239,7 +239,7 @@
           >
             <!-- Active: "bg-gray-100", Not Active: "" -->
             <a
-              href="#"
+              href="/users/sign_in"
               class="block px-4 py-2 text-sm text-gray-700"
               role="menuitem"
               tabindex="-1"
@@ -253,7 +253,7 @@
               id="user-menu-item-1"
             >Settings</a>
             <a
-              href="#"
+              href="/users/cancel"
               class="block px-4 py-2 text-sm text-gray-700"
               role="menuitem"
               tabindex="-1"
